--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Anna Lin - Digital designer
 	  <div class="col-sm-8">
 
       <h1>
-        Hello! I'm Anna, currently a designer at Manulife Canada.
+        Hello! I'm Anna, a designer based in Toronto. Currently at Manulife Canada.
       </h1>
         </div>
     </div>
