--- a/_posts/2023-10-01-PCXRD.html
+++ b/_posts/2023-10-01-PCXRD.html
@@ -4,45 +4,91 @@ title: PC Express Rapid Delivery
 subtitle: Helping customers get their groceries delivered faster than ever.
 thumb: assets/images/thumb-pcx-rapid.jpg
 description: PC Express Rapid Delivery is a service that can bring groceries to your door in as little as 30 minutes. Working with the marketing manager and copywriter, I executed a holistic campaign aimed at driving brand awareness and recognition. The campaign strategy is to foster trial and repeat purchase behaviors through consistent and engaging communications. The final design showcases the speed and convenience of this service, talking to customers that has an immediate need for fresh grocery staples, pantry items and household supplies.
-
 ---
 
+<div class="row mt-5">
+    <div class="col">
 
-<div class="row mt-5 justify-content-center">
-    <div class="col-sm-6">
+     <h3>Social Media</h3>
 
+    </div>
+
+</div>
+
+
+<div class="row">
+    <div class="col">
         <video width="100%" height="auto" muted autoplay loop>
-          <source src="/assets/video/pcx-pass.mp4" type="video/mp4">
+          <source src="/assets/video/pcxrd-1.mp4" type="video/mp4">
          </video>
-
+    </div>
+    <div class="col">
+        <video width="100%" height="auto" muted autoplay loop>
+          <source src="/assets/video/pcxrd-2.mp4" type="video/mp4">
+         </video>
+    </div>
+    <div class="col">
+        <video width="100%" height="auto" muted autoplay loop>
+          <source src="/assets/video/pcxrd-3.mp4" type="video/mp4">
+         </video>
     </div>
 
 </div>
 
 
-<div class="row mt-5 justify-content-center">
 
-    <div class="col-sm-10">
-       <img src="/assets/images/PCX-Pass-OOH-1.png" class="img-fluid">
-        <span class="img-note">Yonge-Dundas Square</span>
+
+
+<div class="row mt-5">
+    <div class="col">
+
+     <h3>Email Design</h3>
+
     </div>
 
 </div>
 
-<div class="row mt-5 justify-content-center">
+<div class="row">
+    <div class="col">
 
-    <div class="col-sm-10">
-       <img src="/assets/images/PCX-Pass-OOH-2.jpg" class="img-fluid">
-        <span class="img-note">Elevator wrap at Union Station</span>
+       <img src="/assets/images/pcx-rapid-1.jpg" class="img-fluid">
+
     </div>
 
 </div>
 
-<div class="row mt-5 justify-content-center">
+<div class="row mt-5">
+    <div class="col">
 
-    <div class="col-sm-10">
-       <img src="/assets/images/PCX-Pass-OOH-3.jpg" class="img-fluid">
-        <span class="img-note">Bay Concourse Hall</span>
+     <h3>Home Page</h3>
+
+    </div>
+
+</div>
+
+<div class="row">
+    <div class="col">
+
+       <img src="/assets/images/pcx-rapid-2.jpg" class="img-fluid">
+
+    </div>
+
+</div>
+
+<div class="row mt-5">
+    <div class="col">
+
+     <h3>Bag Stuffer</h3>
+
+    </div>
+
+</div>
+
+<div class="row">
+    <div class="col">
+
+       <img src="/assets/images/pcx-rapid-3.jpg" class="img-fluid">
+
     </div>
 
 </div>
