--- a/_posts/2023-04-01-PCX_Pass.html
+++ b/_posts/2023-04-01-PCX_Pass.html
@@ -6,89 +6,42 @@ thumb: assets/images/thumb-pcx-pass.jpg
 description: PC Express Pass is a new subscription model that allows customers pay a set fee for unlimited pickup and/or delivery services at PC Express. To increase brand awareness, our national launch campaign included OOH ad placements spanning across Canada. Working alongside with my team, I got the opportunity to design our placements at Yonge-Dundas Square and Union Station.
 ---
 
-<div class="row mt-5">
-    <div class="col">
 
-     <h3>Social Media</h3>
+<div class="row mt-5 justify-content-center">
+    <div class="col-sm-6">
 
-    </div>
-
-</div>
-
-
-<div class="row">
-    <div class="col">
         <video width="100%" height="auto" muted autoplay loop>
-          <source src="/assets/video/pcxrd-1.mp4" type="video/mp4">
+          <source src="/assets/video/pcx-pass.mp4" type="video/mp4">
          </video>
-    </div>
-    <div class="col">
-        <video width="100%" height="auto" muted autoplay loop>
-          <source src="/assets/video/pcxrd-2.mp4" type="video/mp4">
-         </video>
-    </div>
-    <div class="col">
-        <video width="100%" height="auto" muted autoplay loop>
-          <source src="/assets/video/pcxrd-3.mp4" type="video/mp4">
-         </video>
-    </div>
-
-</div>
-
-
-
-
-
-<div class="row mt-5">
-    <div class="col">
-
-     <h3>Email Design</h3>
 
     </div>
 
 </div>
 
-<div class="row">
-    <div class="col">
 
-       <img src="/assets/images/pcx-rapid-1.jpg" class="img-fluid">
+<div class="row mt-5 justify-content-center">
 
+    <div class="col-sm-10">
+       <img src="/assets/images/PCX-Pass-OOH-1.png" class="img-fluid">
+        <span class="img-note">Yonge-Dundas Square</span>
     </div>
 
 </div>
 
-<div class="row mt-5">
-    <div class="col">
+<div class="row mt-5 justify-content-center">
 
-     <h3>Home Page</h3>
-
+    <div class="col-sm-10">
+       <img src="/assets/images/PCX-Pass-OOH-2.jpg" class="img-fluid">
+        <span class="img-note">Elevator wrap at Union Station</span>
     </div>
 
 </div>
 
-<div class="row">
-    <div class="col">
+<div class="row mt-5 justify-content-center">
 
-       <img src="/assets/images/pcx-rapid-2.jpg" class="img-fluid">
-
-    </div>
-
-</div>
-
-<div class="row mt-5">
-    <div class="col">
-
-     <h3>Bag Stuffer</h3>
-
-    </div>
-
-</div>
-
-<div class="row">
-    <div class="col">
-
-       <img src="/assets/images/pcx-rapid-3.jpg" class="img-fluid">
-
+    <div class="col-sm-10">
+       <img src="/assets/images/PCX-Pass-OOH-3.jpg" class="img-fluid">
+        <span class="img-note">Bay Concourse Hall</span>
     </div>
 
 </div>
