--- a/_posts/2023-01-01-SL.html
+++ b/_posts/2023-01-01-SL.html
@@ -3,7 +3,7 @@ layout: post
 title: Sun Life
 subtitle: Connecting clients and prospects with an advisor through a range of digital initiatives.
 thumb: assets/images/thumb-sl.gif
-description: In my role as the Digital Creative Designer at Sun Life, I specialized in marketing campaigns that help clients and prospects connect with an advisor. Embracing an agile approach, I work in close collaboration with marketing managers and copywriters. Together, we executed a wide array of digital strategies, including but not limited to socials, emails, landing pages, and programmatic ads. All designs are produced with their corresponding French equivalents, and occasionally, they are extended to other languages as well.
+description: As the Digital Creative Designer at Sun Life, I focused on crafting marketing campaigns aimed at connecting clients and prospects with advisors. Working in an agile team, I partnered closely with marketing managers and copywriters to deliver a diverse range of digital assets. These included social media content, email campaigns, landing pages, and programmatic advertisements. All designs are produced with their corresponding French equivalents, and occasionally, adapted for additional languages to ensure broader accessibility and reach.
 ---
 
 <div class="row mt-5">
@@ -16,7 +16,7 @@ description: In my role as the Digital Creative Designer at Sun Life, I speciali
 </div>
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-3">
         <video width="100%" height="auto" muted autoplay loop>
           <source src="/assets/video/SL/hearsay-1.mp4" type="video/mp4">
          </video>
@@ -41,12 +41,10 @@ description: In my role as the Digital Creative Designer at Sun Life, I speciali
 
 
 <div class="row mt-5">
-    <div class="col">
-
+    <div class="col-sm-3">
         <video width="100%" height="auto" muted autoplay loop>
           <source src="/assets/video/SL/AC-1.mp4" type="video/mp4">
          </video>
-
     </div>
 
     <div class="col">
